2010-07-15  Maciej Stachowiak  <mjs@apple.com>

        Unreviewed, trivial error in previous commit.

        Fix mistake in the last commit due to last minute change.

        * platform/mac-wk2/Skipped: change extensions from -diffs.txt to .html

2010-07-14  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Simon Fraser.

        Add more tests that fail under WebKit2 to the WebKit2 skipped list
        https://bugs.webkit.org/show_bug.cgi?id=42334

        * platform/mac-wk2/Skipped:

2010-07-15  Eric Seidel  <eric@webkit.org>

        Unreviewed, just updating expectations.

        * html5lib/runner-expected.txt:
         - I think my changes got out of order with one another.
           The new results here are correct.

2010-07-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r63352.
        http://trac.webkit.org/changeset/63352
        https://bugs.webkit.org/show_bug.cgi?id=42341

        Broke plugin-initiate-popup-window.html and plugin-javascript-
        access.html on snow leopard (Requested by abarth on #webkit).

        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
        * plugins/plugin-initiate-popup-window-expected.txt: Removed.
        * plugins/plugin-initiate-popup-window.html: Removed.

2010-07-14  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Second pass of updating baselines, fixing bad media baselines.

        * platform/gtk/media/controls-after-reload-expected.txt:
        * platform/gtk/media/controls-strict-expected.txt:
        * platform/gtk/media/controls-styling-expected.txt:
        * platform/gtk/media/video-replaces-poster-expected.txt:

2010-07-14  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Just updating expected results.

        Add a test to document WebKit (and Minefield's) HTML5 spec violation related to text node coalescing