@@ -108,7 +108,8 @@ void RenderSVGRoot::layout()
     // Arbitrary affine transforms are incompatible with LayoutState.
     view()->disableLayoutState();
 
-    LayoutRepainter repainter(*this, m_everHadLayout && checkForRepaintDuringLayout());
+    bool needsLayout = selfNeedsLayout();
+    LayoutRepainter repainter(*this, needsLayout && m_everHadLayout && checkForRepaintDuringLayout());
 
     IntSize oldSize(width(), height());
     calcWidth();
@@ -118,7 +119,7 @@ void RenderSVGRoot::layout()
     SVGSVGElement* svg = static_cast<SVGSVGElement*>(node());
     m_isLayoutSizeChanged = svg->hasRelativeLengths() && oldSize != size();
 
-    SVGRenderSupport::layoutChildren(this, selfNeedsLayout());
+    SVGRenderSupport::layoutChildren(this, needsLayout);
     m_isLayoutSizeChanged = false;
 
     repainter.repaintAfterLayout();
